--- a/style.css
+++ b/style.css
@@ -1,9 +1,8 @@
-h1,h3{
+.red{
     color: red;
-    font-size: 3rem;
+    font-size: 30px;
 }
-#heading2{
+.blue{
+    font-size: 30px;
     color: blue;
-    background-color: aqua;
-    font-size: 3rem;
 }
