--- a/style.css
+++ b/style.css
@@ -18,3 +18,12 @@
 span{
     text-transform: uppercase;
 }
+.body{
+    color: firebrick;
+}
+.heading{
+    color: red;
+}
+.div{
+    color: saddlebrown;
+}
