--- a/style.css
+++ b/style.css
@@ -3,6 +3,6 @@
     background: rgb(130, 59,68);
 }
 p{
-    color:rgb(46,86,99);
+    color:rgba(46,86,99,1.1);
     background: rgb(210,97,100);
 }
