--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 .tha{
-    color:rgb(240,183,78);
-    background: rgb(130, 59,68);
+    color:#0A8080;
+    background: #B0DB43;
 }
-p{
-    color:rgba(46,86,99,1.1);
-    background: rgb(210,97,100);
+h3{
+    color:#BD632F;
+    background: #FFF689;
 }
