styling the font

--- a/style.css
+++ b/style.css
@@ -1,8 +1,12 @@
 .tha{
-    color:#0A8080;
-    background: #B0DB43;
+    color:#0a7ce6;
+    background: #fbff02;
+    width: 180px;
+    font-size: 30px;
 }
 h3{
-    color:#BD632F;
-    background: #FFF689;
+    color:#ff0000;
+    background: #00f08c;
+    width: 180px;
+    font-size: 30px;
 }
