--- a/style.css
+++ b/style.css
@@ -1,10 +1,15 @@
 .parent{
-    background: blueviolet;
+    background: green;
     width: 300px;
-    height: 300px;
+    height: 200px;
 }
-.child{
-    background: coral;
-    width: 50%;
-    height: 50%;
+.child1{
+    background: orange;
+    width: 100%;
+    height: 35%;
+}
+.child2{
+    background: white;
+    width: 100%;
+    height: 35%;
 }
