--- a/style.css
+++ b/style.css
@@ -1,15 +1,12 @@
-.parent{
-    background: green;
-    width: 300px;
-    height: 200px;
+html{
+    font-size: 65px;
 }
-.child1{
-    background: orange;
-    width: 100%;
-    height: 35%;
+body{
+    font-size: 45px;
 }
-.child2{
-    background: white;
-    width: 100%;
-    height: 35%;
+.heading1{
+    font-size: 2em;
+}
+.heading2{
+    font-size: 32px;
 }
