--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 html{
-    font-size: 65px;
+    font-size: 32px;
 }
 body{
-    font-size: 45px;
+    font-size: 23px;
 }
 .heading1{
     font-size: 2em;
@@ -10,3 +10,4 @@ body{
 .heading2{
     font-size: 32px;
 }
+/* here in the em sizing the em get affeted by the root as well as the parent element */
