--- a/style.css
+++ b/style.css
@@ -1,6 +1,20 @@
-h1 {
+a{
+    text-decoration: none;
+}
+h1{
+    text-decoration: underline;
     text-align: center;
 }
-body {
-    text-indent: 50px;
+.one{
+    line-height: 25px;
+    text-decoration: line-through;
+}
+.two{
+    letter-spacing: 11px;
+    line-height: 1.5rem;
+    text-decoration: overline;
+}
+.three{
+    word-spacing: 15px;
+    text-transform: capitalize;
 }
