--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 .one{
     background: orangered;
     margin: 0px;
+    border-left: 5px solid black;
+    border-right: 5px solid black;
+    border-top: 5px solid black;
 }
 .two{
     background: white;
@@ -11,4 +14,7 @@
 .three{
     background: green;
     margin: 0px;
+    border-left: 5px solid black;
+    border-right: 5px solid black;
+    border-bottom: 5px solid black;
 }
