--- a/style.css
+++ b/style.css
@@ -18,3 +18,11 @@
     border-right: 5px solid black;
     border-bottom: 5px solid black;
 }
+p{
+    background: black;
+    color: white;
+    padding: 30px;
+    border: 5px ridge red;
+    border-radius: 5rem;
+    margin-top: -50px ;
+}
