--- a/style.css
+++ b/style.css
@@ -1,28 +1,18 @@
-.one{
-    background: orangered;
-    margin: 0px;
-    border-left: 5px solid black;
-    border-right: 5px solid black;
-    border-top: 5px solid black;
+div{
+    margin: 3rem;
 }
-.two{
-    background: white;
-    margin: 0px;
-    border-left: 5px solid black;
-    border-right: 5px solid black;
-}
-.three{
-    background: green;
-    margin: 0px;
-    border-left: 5px solid black;
-    border-right: 5px solid black;
-    border-bottom: 5px solid black;
-}
-p{
+#one{
     background: black;
     color: white;
     padding: 30px;
+    margin: 30px;
     border: 5px ridge red;
-    border-radius: 5rem;
-    margin-top: -50px ;
+}
+#two{
+    background: black;
+    color: white;
+    padding: 30px;
+    margin: 30px;
+    outline: 5px ridge red;
+    outline-offset: -20px;
 }
