--- a/style.css
+++ b/style.css
@@ -1,10 +1,13 @@
+body{
+    text-align: center;
+}
 .block{
     background: red;
     color: white;
-    display: inline;
+    width: 100px;
+    margin: 5px auto;
 }
 .inline{
     background: blue;
     color: white;
-    display: block;
 }
