--- a/style.css
+++ b/style.css
@@ -1,27 +1,17 @@
+*{
+    margin: 5px;
+    padding: 5px;
+}
 div{
-    font-size: 2rem;
-    font-weight: bolder;
-    color: yellow;
-    height: 300px;
+    width: 100px;
+    height: 100px;
 }
-.big{
-    background: url('./big.jpeg');
-    background-repeat: space;
+.one{
+    background: linear-gradient(black,red);
 }
-.small{
-    background: url('./small.jpg');
-    border: 2px solid black;
-    background-repeat: no-repeat;
-    background-position: left;
-    background-position: right;
-    background-position: bottom;
-    background-position: top;
-    background-position: 30% 80%;
+.two{
+    background: linear-gradient(to top,black,red);
 }
-.folder{
-    background: url('./images/image.jpeg');
-    background-repeat: round;
-    background-repeat: repeat-x;
-    background-repeat: repeat-y;
-    background-size: 100px 100px;
+.three{
+    background: linear-gradient(200deg,red,blue);
 }
