--- a/style.css
+++ b/style.css
@@ -1,17 +1,14 @@
-*{
-    margin: 5px;
-    padding: 5px;
-}
-div{
-    width: 100px;
-    height: 100px;
+h1{
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    color: darkblue;
 }
 .one{
-    background: linear-gradient(black,red);
+    background: url('./big.jpeg')center/cover fixed no-repeat;
 }
 .two{
-    background: linear-gradient(to top,black,red);
-}
-.three{
-    background: linear-gradient(200deg,red,blue);
+    background:linear-gradient(to top left,rgba(200,150,0,0.5),rgba(50,180,235,0.5)), url('./big.jpeg')center/cover fixed no-repeat;
 }
