use of float and clear properties

--- a/style.css
+++ b/style.css
@@ -1,25 +1,10 @@
-*{
-    margin: 0px;
-}
-h1{
-    min-height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    color: darkblue;
+div{
+    border: 3px solid black;
+    padding: 5px;
 }
 .one{
-    background: url('./big.jpeg')center/cover fixed no-repeat;
+    float: left;
 }
-.two{
-    background:radial-gradient(ellipse at center,  rgba(255,5,9,0.73) 0%,rgba(0,45,229,0.42) 100%), url('./big.jpeg')center/cover fixed no-repeat;
-}
-.colorzilla{
-    /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#ff0509+0,002de5+100&0.73+0,0.42+100 */
-background: -moz-radial-gradient(center, ellipse cover,  rgba(255,5,9,0.73) 0%, rgba(0,45,229,0.42) 100%); /* FF3.6-15 */
-background: -webkit-radial-gradient(center, ellipse cover,  rgba(255,5,9,0.73) 0%,rgba(0,45,229,0.42) 100%); /* Chrome10-25,Safari5.1-6 */
-background: radial-gradient(ellipse at center,  rgba(255,5,9,0.73) 0%,rgba(0,45,229,0.42) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#baff0509', endColorstr='#6b002de5',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
-
+p{
+    margin-left: 110px;
 }
