--- a/style.css
+++ b/style.css
@@ -1,10 +1,17 @@
 div{
     border: 3px solid black;
-    padding: 5px;
+    position: static;
+    color: white;
 }
 .one{
-    float: left;
+    background: red;
 }
-p{
-    margin-left: 110px;
+.two{
+    background: green;
+}
+.special{
+    background: blue;
+    position: relative;
+    top:10px;
+    left: 15px;
 }
