--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ div{
 }
 .special{
     background: blue;
-    position: absolute;
-    top: 0%;
+    position: fixed;
+    top: 30%;
     right: 30px;
 }
