--- a/style.css
+++ b/style.css
@@ -1,31 +1,27 @@
-body{
-    background: red;
+img{
+    width: 100px;
+    height: 100px;
+    position: absolute;
 }
 div{
-    background: black;
+    margin: 50px;
+    height: 80vh;
+    width: 80vw;
+    border: 2px solid rgb(240,140,40);
+    position: relative;
 }
-h1{
-    color: white;
+.one{
+    top: 0;
+    left: 0;
+    z-index: 3;
 }
-@media screen and (min-width: 750px){
-    body{
-    background: rgb(78,199,21);
+.two{
+    top: 10%;
+    left: 15%;
+    z-index: 2;
 }
-div{
-    background: rgb(215,65,99);
-}
-h1{
-    color: white;
-}   
-}
-@media screen and (max-width: 550px){
-    body{
-    background: rgb(210,100,20);
-}
-div{
-    background: rgb(87,142,210);
-}
-h1{
-    color: white;
-}   
+.three{
+    top: 20%;
+    left: 25%;
+    z-index: 1;
 }
