--- a/style.css
+++ b/style.css
@@ -1,14 +1,32 @@
-p::before {
-    content: "Hello ";
-    background: black;
-    color: white;
+/* we can not add the pseudo elements for the image cuz the image is itself is the content but we can add the pseudo elements for the div cuz we can add the multiple images in the div that means we can add the multiple contents inside the div and that means we can add the pseudo elements for the div but image itself is the content so for that we can not add the pseudo elements */
+div{
+    width: 50vw;
+    margin: 100px;
+    position: relative;
+}   
+img{
+    width: 100%;
     display: block;
-    font-size: 1.5rem;
 }
-p::After {
-    content: "bye-bye ";
-    background: red;
-    color: white;
-    display: block;
-    font-size: 1.5rem;
+div::before {
+    content: "";
+    border: 3px solid black;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    box-sizing: border-box;
+    top: -40px;
+    left: -40px;
+    z-index: -2;
+}
+div::after {
+    content: "";
+    background: black;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    box-sizing: border-box;
+    top: -20px;
+    left: -20px;
+    z-index: -1;
 }
