--- a/style.css
+++ b/style.css
@@ -30,3 +30,12 @@ div::after {
     left: -20px;
     z-index: -1;
 }
+
+div:hover::after{
+    top: 20px;
+    left: 20px;
+}
+div:hover::before{
+    top: 40px;
+    left: 40px;
+}
