--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ div::before {
     top: -40px;
     left: -40px;
     z-index: -2;
+    transition: 0.5s linear;
 }
 div::after {
     content: "";
@@ -29,6 +30,7 @@ div::after {
     top: -20px;
     left: -20px;
     z-index: -1;
+    transition: 0.5s linear;
 }
 
 div:hover::after{
