interesting facts on links

--- a/style.css
+++ b/style.css
@@ -1,4 +1,14 @@
-/* :: used for the pseudo elements and : used for the pseudo classes */
-p:hover{
-    font-size: 32px;
+/* here I have visited the youtube link so that visited link is gone red but I didn't have any top Id so that means I don't have visited the top so they all are by default red from the parent and in hover link whenever I hover over it then it goes to background blue and whenever I hold or click on the active link it goes to yellow and when I go back it is red now that means I have visited that link*/
+a{
+    background: black;
+    color: white;
+}
+a:visited{
+    background: red;
+}
+a:hover{
+    background: blue;
+}
+a:active{
+    background: yellow;
 }
