--- a/style.css
+++ b/style.css
@@ -1,42 +1,20 @@
-/* animation is like we can control every percent but unlike the transition we can't control every percent */
+/* we can declare variables globally and locally and then we can use them as nornmally if we declare a variable locally then it can only be accessible inside the scope we have declared and if we declare a variable globally then we can access the variable anywhere throughout the whole body of html */
+:root{
+    --maincolor: red;
+    --maintransition: background 1s,color 1s;
+}
+h1{
+    color: var(--maincolor);
+}
 div{
-    width: 100px;
-    height: 100px;
-    margin: 5px;
+    --secondarycolor: blue;
 }
-.one{
+h2{
+    color: var(--secondarycolor);
+    background: black;
+}
+h2:hover{
+    color: white;
     background: red;
-    transition: all 1s;
-}
-.two{
-    background: blue;
-    /* animation-name: anime;
-    animation-duration: 5s;
-    animation-iteration-count: 1; */
-    animation: anime 5s 1;
-}
-.one:hover{
-    transform: translateX(100px);
-}
-@keyframes anime{
-    10%{
-        transform: translateX(30px);
-        background: rgb(230, 176, 201);
-    }
-    25%{
-        transform: translateX(50px);
-        background: black;
-    }
-    50%{
-        transform: translateX(70px);
-        background: blue;
-    }
-    75%{
-        transform: translateX(-10px);
-        background: green;
-    }
-    100%{
-        transform: translateX(50px);
-        background: orangered;
-    }
+    transition: var(--maintransition);
 }
